--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^7.1.0",
     "react-spinners": "^0.14.1",
     "use-debounce": "^10.0.3"
   },
