--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@types/papaparse": "^5.3.15",
+    "date-fns": "^4.1.0",
     "mapbox-gl": "^3.7.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
@@ -38,6 +41,7 @@
     "prettier": "3.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "^2.1.8"
   }
 }
