basic slides done

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^7.1.0",
     "react-spinners": "^0.14.1",
+    "swiper": "^11.1.15",
     "use-debounce": "^10.0.3"
   },
   "devDependencies": {
