--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   },
   "dependencies": {
     "@types/papaparse": "^5.3.15",
+    "add": "^2.0.6",
     "date-fns": "^4.1.0",
     "mapbox-gl": "^3.7.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^7.1.0",
     "react-spinners": "^0.14.1",
     "swiper": "^11.1.15",
-    "use-debounce": "^10.0.3"
+    "use-debounce": "^10.0.3",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
