--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.0",
     "@types/papaparse": "^5.3.15",
     "add": "^2.0.6",
     "date-fns": "^4.1.0",
