--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/papaparse": "^5.3.15",
     "add": "^2.0.6",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "mapbox-gl": "^3.7.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
@@ -30,12 +31,14 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^7.1.0",
     "react-spinners": "^0.14.1",
+    "react-web-share": "^2.0.2",
     "swiper": "^11.1.15",
     "use-debounce": "^10.0.3",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/html2canvas": "^1.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
