--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^7.1.0",
+    "react-router": "^7.1.1",
     "react-spinners": "^0.14.1",
     "react-web-share": "^2.0.2",
     "swiper": "^11.1.15",
